--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,13 @@
 <%- include ("./partials/head.ejs") %>
+    <header>
+    </header>
     <section>
-        <h1>Startingpage</h1>
-        <p>testerino</p>
+        <h1>Welcome to HobbyMatcher</h1>
+        <ol>
+            <li>Start with adding some of your hobbies to your profile.</li>
+            <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
+            <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
+        </ol>
+        <a>Get started</a>
     </section>
 <%- include ("./partials/footer.ejs") %>
