--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,6 @@
 <%- include ("./partials/head.ejs") %>
     <section>
-        <h1>Test</h1>
+        <h1>My profile</h1>
         <p>testerino</p>
     </section>
 <%- include ("./partials/footer.ejs") %>
