--- a/views/map.ejs
+++ b/views/map.ejs
@@ -1,4 +1,4 @@
-<%- include ("./partials/starting-head.ejs") %>
+<%- include ("./partials/map-head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <section>
         <h1>Welcome to HobbyMatcher</h1>
