--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,5 @@
-<%- include ("./partials/head.ejs") %>
+<%- include ("./partials/profile-head.ejs") %>
+<%- include ("./partials/header.ejs") %>
     <section>
         <h1>My profile</h1>
         <p>testerino</p>
