--- a/public/styles/getting-started.css
+++ b/public/styles/getting-started.css
@@ -1,7 +1,47 @@
-:root {
-    --grey: #F2F2F2;
-    --bright-green: #64BF42;
-    --black: #000;
-    --white: #fff;
-    --shadow: filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2em;
+}
+
+ol {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 2em;
+}
+
+ol > li {
+    margin-top: 2em;
+}
+
+a {
+    color: var(--white);
+    display: block;
+    text-align: center;
+    width: 40%;
+    padding: 1em;
+    margin: 0 auto;
+    margin-bottom: 2em;
+    background-color: var(--bright-green);
+    text-decoration: none;
+}
+
+a:visited {
+    color: var(--white);
 }
