--- a/public/styles/map.css
+++ b/public/styles/map.css
@@ -5,3 +5,29 @@
     --white: #fff;
     --shadow: filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 2em;
+    margin-left: 2em;
+}
+
+p {
+    font-size: 2em;
+}
