--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <%- include ("./partials/starting-head.ejs") %>
 <%- include ("./partials/header.ejs") %>
-    <section>
-        <h1>Welcome to HobbyMatcher</h1>
-        <ol>
-            <li>Start with adding some of your hobbies to your profile.</li>
-            <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
-            <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
-        </ol>
-        <a>Get started</a>
-    </section>
+    <main>
+        <section>
+            <h1>Welcome to HobbyMatcher</h1>
+            <ol>
+                <li>Start with adding some of your hobbies to your profile.</li>
+                <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
+                <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
+            </ol>
+            <a href="/profile">Get started</a>
+        </section>
+    </main>
 <%- include ("./partials/footer.ejs") %>
