--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,21 +1,6 @@
 <%- include ("./partials/form-head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <main>
-        <form action="/accountaangemaakt" method="POST">
-            <fieldset>
-                <legend>Credentials</legend>
-                <label for="name">Name</label>
-                <input type="text" name="user" id="name" required>
-                <label for="email">E-mail</label>
-                <input type="email" name="email" id="email" required>
-                <input type="submit" value="Next">
-            </fieldset>
-            <fieldset>
-                <legend>Add more hobbies</legend>
-                <label for="search">Hobbies</label>
-                <button type="submit">Zoek</button>
-                <input type="submit" value="Signup">
-            </fieldset>
-        </form>
+<%- include ("./partials/form.ejs") %>
     </main>
 <%- include ("./partials/footer.ejs") %>
