--- a/views/map.ejs
+++ b/views/map.ejs
@@ -1,12 +1,11 @@
 <%- include ("./partials/map-head.ejs") %>
 <%- include ("./partials/header.ejs") %>
-    <section>
-        <h1>Welcome to HobbyMatcher</h1>
-        <ol>
-            <li>Start with adding some of your hobbies to your profile.</li>
-            <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
-            <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
-        </ol>
-        <a>Get started</a>
-    </section>
+    <main>
+        <section>
+            <h1>Hobby map</h1>
+            <div>
+                <p>Hmm, looks like you don’t have a location yet. Add it in your profile</p>
+            </div>
+        </section>
+    </main>
 <%- include ("./partials/footer.ejs") %>
