add leaflet api

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -1,4 +1,4 @@
-<%- include ("./partials/map-head.ejs") %>
+<%- include ("./partials/head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <main>
         <section>
@@ -6,6 +6,7 @@
             <div>
                 <p>Hmm, looks like you don’t have a location yet. Add it in your profile</p>
             </div>
+            <div id="map"></div>
         </section>
     </main>
 <%- include ("./partials/footer.ejs") %>
