--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<%- include ("./partials/profile-head.ejs") %>
+<%- include ("./partials/head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <main>
         
