--- a/public/styles/map.css
+++ b/public/styles/map.css
@@ -1,11 +1,3 @@
-:root {
-    --grey: #F2F2F2;
-    --bright-green: #64BF42;
-    --black: #000;
-    --white: #fff;
-    --shadow: filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
-}
-
 body {
     display: flex;
     flex-direction: column;
@@ -25,9 +17,8 @@ section {
 
 h1 {
     font-size: 2em;
-    margin-left: 2em;
 }
 
-p {
-    font-size: 2em;
+#map { 
+    height: 40vh; 
 }
