--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,4 +1,4 @@
-<%- include ("./partials/form-head.ejs") %>
+<%- include ("./partials/head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <main>
 <%- include ("./partials/form.ejs") %>
