--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include ("./partials/starting-head.ejs") %>
+<%- include ("./partials/head.ejs") %>
 <%- include ("./partials/header.ejs") %>
     <main>
         <section>
