--- a/views/credentials.ejs
+++ b/views/credentials.ejs
@@ -1,6 +1,7 @@
 <%- include ("./partials/head.ejs") %>
+<body class="editpage">
 <%- include ("./partials/header.ejs") %>
-    <main>
+<main>
 <%- include ("./partials/form.ejs") %>
-    </main>
+</main>
 <%- include ("./partials/footer.ejs") %>
