--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include ("./partials/head.ejs") %>
+<body class="startingpage">
 <%- include ("./partials/header.ejs") %>
     <main>
         <section>
@@ -8,7 +9,7 @@
                 <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
                 <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
             </ol>
-            <a href="/profile">Get started</a>
+            <a href="/map">Get started</a>
         </section>
     </main>
 <%- include ("./partials/footer.ejs") %>
