--- a/views/map.ejs
+++ b/views/map.ejs
@@ -1,12 +1,11 @@
 <%- include ("./partials/head.ejs") %>
+<body class="hobbymap">
 <%- include ("./partials/header.ejs") %>
     <main>
-        <section>
-            <h1>Hobby map</h1>
-            <div>
-                <p>Hmm, looks like you don’t have a location yet. Add it in your profile</p>
-            </div>
-            <div id="map"></div>
-        </section>
+        <h1>Hobby map</h1>
+        <!--<div>
+            <p>Hmm, looks like you don’t have a location yet. Add it in your profile</p>
+        </div>-->
+        <div id="map"></div>
     </main>
-<%- include ("./partials/footer.ejs") %>
+<%- include ("./partials/map-footer.ejs") %>
