--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-  <a href="/profile">
-    <img src="" alt="" />
+  <a href="/userform">
+    <div></div>
     <span>Inloggen</span>
   </a>
 </header>
