--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -4,18 +4,22 @@
         
         <label for="name">Name</label>
         <input type="text" name="name" placeholder="name" required>
-        
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" placeholder="email" required>
-        
-        <label for="address">Address</label>
-        <input type="text" name="address" placeholder="street address">
-        
+
+        <label for="selecthobby">Select hobby</label>
         <select name="selecthobby">
-            <option value="1">Soccer</option>
-            <option value="2">Hockey</option>
-            <option value="3">Chess</option>
+            <option value="Soccer">Soccer</option>
+            <option value="Hockey">Hockey</option>
+            <option value="Chess">Chess</option>
+            <option value="Gaming">Gaming</option>
+            <option value="Cycling">Cycling</option>
+            <option value="Drawing">Drawing</option>
         </select>
+
+        <label for="age">Age</label>
+        <input type="number" name="age" max="100" placeholder="00" required>
+        
+        <label for="dateofbirth">Date of birth</label>
+        <input type="date" name="dateofbirth">
         
         <input type="submit" value="submit">
     </fieldset>
