add form styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include ("./partials/head.ejs") %>
 <body class="startingpage">
-<%- include ("./partials/header.ejs") %>
+<%- include ("./partials/landing-header.ejs") %>
     <main>
         <section>
             <h1>Welcome to HobbyMatcher</h1>
