--- a/views/userform.ejs
+++ b/views/userform.ejs
@@ -1,5 +1,5 @@
 <%- include ("./partials/head.ejs") %>
-<body class="editpage">
+<body class="formpage">
 <%- include ("./partials/header.ejs") %>
 <main>
 <%- include ("./partials/form.ejs") %>
