--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -11,6 +11,7 @@
             <option value="Hockey">Hockey</option>
             <option value="Chess">Chess</option>
             <option value="Gaming">Gaming</option>
+            <option value="Coding">Coding</option>
             <option value="Cycling">Cycling</option>
             <option value="Drawing">Drawing</option>
         </select>
