--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,6 +13,7 @@
 
             <article>
                 <div>
+                    <img src="/assets/<%= item.selecthobby %>.svg" alt="<%= item.selecthobby %>"/>
                     <p><%= item.selecthobby %></p>
                 </div>
                 <p>Hobby</p>
