--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
 <%- include ("./partials/landing-header.ejs") %>
     <main>
         <section>
-            <h1>Welcome to HobbyMatcher</h1>
+            <h1>Welcome to</h1>
+            <img src="assets/logo.svg" alt="logo of the app"/>
             <ol>
                 <li>Start with adding some of your hobbies to your profile.</li>
                 <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
