--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,12 @@
 <header>
-  <a href="/userform">
-    <div></div>
-    <span>Inloggen</span>
-  </a>
+  <div>
+    <img src="assets/logo.svg" alt="logo of the app"/>
+  </div>
+
+  <div>
+    <a href="/userform">
+      <div></div>
+      <span>Inloggen</span>
+    </a>
+  </div>  
 </header>
