--- a/public/styles/getting-started.css
+++ b/public/styles/getting-started.css
@@ -33,8 +33,20 @@
     width: 40%;
     padding: 1em;
     margin: 0 auto;
-    background-color: var(--bright-green);
+    background-color: var(--cta);
     text-decoration: none;
+    border-radius: 0.3em;
+}
+
+.startingpage main section h1 {
+    color: #22AAE6;
+}
+
+
+.startingpage main section img {
+    display: block;
+    margin: 0 auto;
+    width: 75%;
 }
 
 .startingpage a:visited {
