--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header>
-  <div>
-    <img src="assets/logo.svg" alt="logo of the app"/>
-  </div>
+  <a href="/map">
+    <img src="/assets/logo.svg" alt="logo of the app" />
+  </a>
 
   <div>
     <a href="/userform">
       <div></div>
       <span>Inloggen</span>
     </a>
-  </div>  
+  </div>
 </header>
