--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,7 @@
         <section>
             <article>
                 <div>
+                    <img src="/assets/name.svg" alt="name of the user"/>
                     <p><%= item.name %></p>
                 </div>
                 <p>Name</p>
@@ -21,6 +22,7 @@
 
             <article>
                 <div>
+                    <img src="/assets/region.svg" alt="region of the user"/>
                     <p><%= item.region %></p>
                 </div>
                 <p>Region</p>
@@ -28,6 +30,7 @@
 
             <article>
                 <div>
+                    <img src="/assets/age.svg" alt="age of the user"/>
                     <p><%= item.age %></p>
                 </div>
                 <p>Age</p>
