--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,18 @@
 <%- include ("./partials/head.ejs") %>
+
 <body class="startingpage">
-<%- include ("./partials/landing-header.ejs") %>
+    <%- include ("./partials/landing-header.ejs") %>
     <main>
         <section>
             <h1>Welcome to</h1>
-            <img src="assets/logo.svg" alt="logo of the app"/>
+            <img src="assets/logo.svg" alt="logo of the app" />
             <ol>
                 <li>Start with adding some of your hobbies to your profile.</li>
-                <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.</li>
+                <li>Fill in your location to see if there are people near you that have the same hobbies and ambitions.
+                </li>
                 <li>Find them on the map, and message them to see if they want to share their ambition with you.</li>
             </ol>
             <a href="/map">Get started</a>
         </section>
     </main>
-<%- include ("./partials/footer.ejs") %>
+    <%- include ("./partials/footer.ejs") %>
