change some text

--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -7,13 +7,13 @@
 
         <label for="selecthobby">Select hobby</label>
         <select name="selecthobby">
-            <option value="Soccer">Soccer</option>
-            <option value="Hockey">Hockey</option>
-            <option value="Chess">Chess</option>
-            <option value="Gaming">Gaming</option>
-            <option value="Coding">Coding</option>
-            <option value="Cycling">Cycling</option>
-            <option value="Drawing">Drawing</option>
+            <option value="soccer">Soccer</option>
+            <option value="hockey">Hockey</option>
+            <option value="chess">Chess</option>
+            <option value="gaming">Gaming</option>
+            <option value="coding">Coding</option>
+            <option value="cycling">Cycling</option>
+            <option value="drawing">Drawing</option>
         </select>
 
         <label for="region">Select region</label>
