--- a/views/userform.ejs
+++ b/views/userform.ejs
@@ -1,7 +1,8 @@
 <%- include ("./partials/head.ejs") %>
+
 <body class="formpage">
-<%- include ("./partials/header.ejs") %>
-<main>
-<%- include ("./partials/form.ejs") %>
-</main>
-<%- include ("./partials/footer.ejs") %>
+    <%- include ("./partials/profile-header.ejs") %>
+    <main>
+        <%- include ("./partials/form.ejs") %>
+    </main>
+    <%- include ("./partials/footer.ejs") %>
