--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
   <div>
     <a href="/userform">
       <img src="/assets/user.svg" alt="user image" />
-      <span>Inloggen</span>
+      <span>Registreren</span>
     </a>
   </div>
 </header>
