add lon and lan to form :)

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -9,4 +9,8 @@
         </div>-->
         <div id="map"></div>
     </main>
-    <%- include ("./partials/map-footer.ejs") %>
+    <%- include ("./partials/footer.ejs") %>
+    <%- include ("./partials/map-scripts.ejs") %>
+</body>
+
+</html>
