--- a/views/userform.ejs
+++ b/views/userform.ejs
@@ -6,3 +6,7 @@
         <%- include ("./partials/form.ejs") %>
     </main>
     <%- include ("./partials/footer.ejs") %>
+    <%- include ("./partials/location-scripts.ejs") %>
+</body>
+
+</html>
