--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -1,4 +1,4 @@
-<form action="/profile" method="post">
+<form action="/profile" id="form" method="post">
     <fieldset>
         <legend>Edit Information</legend>
 
