--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -7,6 +7,7 @@
 
         <label for="selecthobby">Select hobby</label>
         <select name="selecthobby">
+            <option hidden disabled selected value> Select a hobby </option>
             <option value="soccer">Soccer</option>
             <option value="hockey">Hockey</option>
             <option value="chess">Chess</option>
@@ -18,6 +19,7 @@
 
         <label for="region">Select region</label>
         <select name="region">
+            <option hidden disabled selected value> Select a region </option>
             <option value="Europe">Europe</option>
             <option value="Asia">Asia</option>
             <option value="North America">North America</option>
