--- a/views/partials/location-scripts.ejs
+++ b/views/partials/location-scripts.ejs
@@ -1,3 +1,4 @@
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 <script src="/scripts/location.js"></script>
+<script src="/scripts/form.js"></script>
