--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -4,6 +4,7 @@
 
         <label for="name">Name</label>
         <input type="text" name="name" placeholder="Name" required>
+        <p id="warning"></p>
 
         <label for="selecthobby">Select hobby</label>
         <select name="selecthobby">
