--- a/views/map.ejs
+++ b/views/map.ejs
@@ -3,11 +3,18 @@
 <body class="hobbymap">
     <%- include ("./partials/header.ejs") %>
     <main>
-        <h1>Hobby map</h1>
-        <!--<div>
-            <p>Hmm, looks like you don’t have a location yet. Add it in your profile</p>
-        </div>-->
-        <div id="map"></div>
+        <div id="hobbyMap" class="wrapper">
+            <h1>Hobby map</h1>
+            <div id="map"></div>
+        </div>
+        <noscript>
+            <style>
+                #hobbyMap {
+                    display: none;
+                }
+            </style>
+            <%- include ("./partials/latlonform.ejs") %>
+        </noscript>
     </main>
     <%- include ("./partials/footer.ejs") %>
     <%- include ("./partials/map-scripts.ejs") %>
