--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,6 +5,7 @@
     --black: #000;
     --white: #fff;
     --shadow: 0.35rem 0.35rem 0.4rem rgba(202, 202, 202, 0.5);
+    --error: #ad0000;
 }
 
 p,
