--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,7 +37,7 @@
                 <p>Age</p>
             </article>
         </section>
-        <a href="/userform">See who's near me</a>
+        <a href="/map">See who's near me</a>
     </main>
     <%- include ("./partials/footer.ejs") %>
 </body>
