--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -3,7 +3,10 @@
 <body class="mapform">
     <%- include ("./partials/header.ejs") %>
     <main>
-        <%- include ("./partials/latlonform.ejs") %>
+        <p> <%= profiles.name %></p>
+        <p> <%= profiles.lon %></p>
+        <p> <%= profiles.lan %></p>
+        <%# include ("./partials/latlonform.ejs") %>
     </main>
     <%- include ("./partials/footer.ejs") %>
 </body>
