--- a/views/partials/form.ejs
+++ b/views/partials/form.ejs
@@ -33,6 +33,12 @@
         <label for="age">Age</label>
         <input type="number" name="age" max="100" placeholder="00" required>
 
+        <label for="lat">Latitude</label>
+        <input type="text" name="lat" required>
+
+        <label for="lon">Longitude</label>
+        <input type="text" name="lon" required>
+
         <input type="submit" value="Submit">
     </fieldset>
 </form>
