add things to server.js

--- a/views/partials/latlonform.ejs
+++ b/views/partials/latlonform.ejs
@@ -2,6 +2,8 @@
     <fieldset>
         <legend>Fill in your latitude and longitude</legend>
 
+        <label for="name">Your name</label>
+        <input type="text" name="name" required>
         <label for="lat">Latitude</label>
         <input type="number" step="any" name="lat" required>
         <label for="lon">Longitude</label>
