--- a/views/map.ejs
+++ b/views/map.ejs
@@ -5,6 +5,10 @@
     <main>
         <div id="hobbyMap" class="wrapper">
             <h1>Hobby map</h1>
+            <%# people.forEach(function(item){ %>
+            <!-- <p> <%= item.lon %></p>
+            <p> <%= item.lat %></p> -->
+            <%# }) %>
             <div id="map"></div>
         </div>
         <noscript>
